HR Improvements and Role fixes (#34)